--- a/New Chess/res/layout/gnu.xml
+++ b/New Chess/res/layout/gnu.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
+  android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent">
   <ScrollView android:layout_marginBottom="50dip" android:id="@+id/ScrollView01" android:layout_height="wrap_content" android:layout_width="fill_parent">
 		<TextView 
-	    android:id="@+id/about_view"
+	    android:id="@+id/gnu_view"
 	    android:layout_width="fill_parent" 
 	    android:text="@string/activity_instructions"
 	    android:scrollbars="vertical" android:layout_height="wrap_content"/>
@@ -14,8 +15,9 @@
     	<Button 
 		android:layout_width="fill_parent" 
 		android:layout_height="wrap_content" 
-		android:text="@string/activity_return" 
+		android:text="@string/activity_back" 
 		android:id="@+id/Button_return_to_screen_5" 
 		android:gravity="center" />
 	</RelativeLayout>
+	
 </LinearLayout>
